[package]
name = "aws_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
dotenv = "0.15.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
