[package]
name = "aws_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"
chrono = "0.4.44"
dashmap = "6.1.0"
dotenv = "0.15.0"
futures-util = "0.3.32"
redis = "1.0.5"
sea-orm = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }
